--- a/mywork06.html
+++ b/mywork06.html
@@ -81,8 +81,8 @@ $(document).ready(function() {
       function toShowInputBox() {
         $("#closeIcon").css("width", "5%");
         $("#searchContent").css("width", "83%");
-	$("#closeIcon").css("display", "none");
-        $("#searchContent").css("display", "none");
+	$("#closeIcon").css("display", "inline-block");
+        $("#searchContent").css("display", "inline-block");
       }
       $("#searchBox").css("display", "block");
       $("#magnifier").css("display", "none");
