--- a/mywork06.html
+++ b/mywork06.html
@@ -84,7 +84,7 @@ $(document).ready(function() {
 	$("#closeIcon").css("display", "inline-block");
         $("#searchContent").css("display", "inline-block");
       }
-      $("#searchBox").css("display", "block"); 5px solid darkorange
+      $("#searchBox").css("display", "block");
       $("#searchBox").css("border", "5px solid darkorange"); 
       $("#magnifier").css("display", "none");
       $("#searchBox").transition({ width: 300 }, 300);
