--- a/mywork06.html
+++ b/mywork06.html
@@ -81,6 +81,7 @@ $(document).ready(function() {
       function toShowInputBox() {
         $("#closeIcon").css("width", "5%");
         $("#searchContent").css("width", "83%");
+        $("#searchContent").css("appearance", "normal");
 	$("#closeIcon").css("display", "inline-block");
         $("#searchContent").css("display", "inline-block");
       }
@@ -108,6 +109,7 @@ $(document).ready(function() {
     $("#closeIcon").css("width", 0);
     $("#searchContent").val("");
     $("#searchContent").css("width", 0);
+    $("#searchContent").css("appearanc", "none");
     $("#searchResultBox").html("");
     $("#closeIcon").css("display", "none");
     $("#searchContent").css("display", "none");
