--- a/mywork06.html
+++ b/mywork06.html
@@ -109,7 +109,7 @@ $(document).ready(function() {
     $("#closeIcon").css("width", 0);
     $("#searchContent").val("");
     $("#searchContent").css("width", 0);
-    $("#searchContent").css("appearanc", "none");
+    $("#searchContent").css("appearance", "none");
     $("#searchResultBox").html("");
     $("#closeIcon").css("display", "none");
     $("#searchContent").css("display", "none");
