added link to new work

--- a/mywork.html
+++ b/mywork.html
@@ -73,6 +73,7 @@
 				<li><a href="mywork04.html" target="_self">斐波那契数列求值</a></li>
 				<li><a href="mywork05.html" target="_self">Random Quote Machine</a></li>
 				<li><a href="mywork06.html" target="_self">Wikipedia viewer</a></li>
+				<li><a href="mywork07.html" target="_self">Minesweeper - 扫雷</a></li>
 			</ul>
 		</div>
 	</div>
