--- a/mywork07.html
+++ b/mywork07.html
@@ -85,6 +85,11 @@
         </tr>
       </tbody>
     </table>
+    <a class="noDecorLink" href="index.html" target="_self">
+     <div id="backToIndex">
+       Back
+     </div>
+    </a>
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src='minesweeper.js'></script>
