--- a/mywork07.html
+++ b/mywork07.html
@@ -48,7 +48,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    background-color: #F75000;
+    background-color: rgb(192, 192, 192);
     color: white;
     font-size: 19px;
     line-height: 50px;
