--- a/mywork07.html
+++ b/mywork07.html
@@ -8,52 +8,121 @@
   <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
   <meta name="format-detection" content="telephone=no" />
   <style>
+  	body{
+  	width: 320px; margin: 0px auto;
+  	}
     .outer{
-      margin: 0px;
-      padding: 4px;
-      text-align: center;
-      background-color: rgb(192, 192, 192);
+	position: relative;
+	margin: 4px;
+	padding: 4px;
+	height: 430px;
+	background-color: rgb(192, 192, 192);
     }
     #mineField{
-      margin: 10px auto; border: 2px solid;
-      border-left-color: rgb(128, 128, 128);
-      border-top-color: rgb(128, 128, 128);
-      border-right-color: white;
-      border-bottom-color: white;
-      border-collapse: separate; border-spacing: 0px;
+	margin: 10px auto; border: 2px solid;
+	border-left-color: rgb(128, 128, 128);
+	border-top-color: rgb(128, 128, 128);
+	border-bottom-color: white;
+	border-right-color: white;
+	border-collapse: separate; border-spacing: 0px;
     }
     #mineField td{
-      width: 22px; height: 22px;
-      background-color: rgb(192, 192, 192); 
-    }
+	width: 22px; height: 22px;
+	background-color: rgb(192, 192, 192); 
+	}
     .cleared{
-      border: 2px solid;
-      border-left-color: rgb(128, 128, 128);
-      border-top-color: rgb(128, 128, 128);
-      border-right-color: white;
-      border-bottom-color: white;
+    border: 2px solid;
+    border-left-color: rgb(128, 128, 128);
+    border-top-color: rgb(128, 128, 128);
+    border-bottom-color: white;
+    border-right-color: white;
     }
     .untouched{
-      border: 2px solid;
-      border-left-color: white;
-      border-top-color: white;
-      border-right-color: rgb(128, 128, 128);
-      border-bottom-color: rgb(128, 128, 128);
-      cursor: pointer;
+    border: 2px solid;
+    border-left-color: white;
+    border-top-color: white;
+    border-right-color: rgb(128, 128, 128);
+    border-bottom-color: rgb(128, 128, 128);
+    cursor: pointer;
     }
    #backToIndex{
-    position: fixed;
-    bottom: 20px;
-    right: 10%;
+   	position: absolute;
+   	bottom: 20px;
+    right: 10px;
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(128, 128, 128);
     color: white;
     font-size: 19px;
     line-height: 50px;
     text-align: center;
     box-shadow: 0px 0px 5px black;
+   }
+   .btnOuter{
+   	display: inline-block;
+	border: 2px solid;
+	width: fit-content;
+	border-left-color: rgb(128, 128, 128);
+	border-top-color: rgb(128, 128, 128);
+	border-bottom-color: white;
+	border-right-color: white;
+   }
+   .btnInner{
+	border: 2px solid;
+	height: 22px;
+    border-left-color: white;
+    border-top-color: white;
+    border-right-color: rgb(128, 128, 128);
+    border-bottom-color: rgb(128, 128, 128);
+    cursor: pointer;
+   }
+   #noMineOuter{
+   	margin: 10px auto auto 23px;
+   }
+   #newMineOuter{
+   	margin: 10px auto auto 21px;
+   }
+   #newMine{
+   	position: relative;
+   	width: 22px;
+   }
+   .faceOuter{
+   	position: absolute;
+   	top: .5px;
+   	left: 1px;
+   	width: 20px;
+   	height: 20px;
+   	border-radius: 20px;
+   	background-color: yellow;
+   }
+   .eyeLeft{
+   	position: absolute;
+   	top: 5px;
+   	left: 6px;
+   	width: 2px;
+   	height: 2px;
+   	border-radius: 2px;
+   	background-color: black;
+   }
+   .eyeRight{
+   	position: absolute;
+   	top: 5px;
+   	left: 12px;
+   	width: 2px;
+   	height: 2px;
+   	border-radius: 2px;
+   	background-color: black;
+   }
+   .smileLips{
+   	position: absolute;
+   	top: 5px;
+   	left: 5px;
+   	width: 10px;
+   	height: 10px;
+   	border-bottom: 2px solid black;
+   	border-bottom-left-radius: 10px;
+   	border-bottom-right-radius: 10px;
    }
   </style>
  </head>
@@ -104,18 +173,28 @@
        Back
      </div>
     </a>
+    <div class="btnOuter" id="noMineOuter">
+    	<div id="noMine" class="btnInner">无雷纯享版</div>
+    </div>
+    <div class="btnOuter" id="newMineOuter">
+    	<div id="newMine" class="btnInner">
+    		&nbsp;
+    		<div class="faceOuter">
+    			<div class="eyeLeft"></div>
+    			<div class="eyeRight"></div>
+    			<div class="smileLips"></div>
+    		</div>
+    	</div>
+    </div>
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src='minesweeper.js'></script>
   <script>
     $(document).ready(function(){
-      $("#mineField td").addClass("untouched");
-      $("#mineField td").each(function(index){
-        $(this).on("click",function(){
-          $(this).removeClass("untouched");
-          $(this).addClass("cleared");
-        });
-      });
+    	makeNoMineField("mineField","untouched","cleared");
+    	$("#noMine").on('click',function(){
+    		makeNoMineField("mineField","untouched","cleared");
+    	});
     });
   </script>
  </body>
