--- a/mywork07.html
+++ b/mywork07.html
@@ -192,7 +192,7 @@
   <script>
     $(document).ready(function(){
 
-    	makeNoMineField("mineField","untouched","cleared");
+    	makeMineField("mineField","untouched","cleared");
 
     	$("#noMine").mousedown(function(){
     		$("#noMine").removeClass("btnInner").addClass("cleared");
