--- a/mywork07.html
+++ b/mywork07.html
@@ -130,6 +130,9 @@
    	border-bottom-left-radius: 10px;
    	border-bottom-right-radius: 10px;
    }
+   .mineNumber{
+    width: 100%; height: 100%; padding: 0px auto; margin: 0px; text-align: center; font-weight: bold; overflow: hidden;
+   }
   </style>
  </head>
  <body>
