--- a/mywork07.html
+++ b/mywork07.html
@@ -18,9 +18,10 @@
   	width: 320px; margin: 0px auto;
   	}
     .outer{
-  	position: relative;
-  	margin: 4px;
+  	position: fixed;
+  	margin: 4px 5px;
   	padding: 4px;
+    width: 300px;
   	height: 430px;
   	background-color: rgb(192, 192, 192);
     }
