--- a/mywork07.html
+++ b/mywork07.html
@@ -132,7 +132,7 @@
    	border-bottom-right-radius: 10px;
    }
    .mineNumber{
-    width: 100%; height: 100%; padding: 0px auto; margin: 0px; text-align: center; font-weight: bold; overflow: hidden;
+    width: 100%; max-width: 100%; height: 100%; max-height: 100%; padding: 0px; margin: 0px; text-align: center; font-weight: bold; overflow: hidden;
    }
   </style>
  </head>
