--- a/mywork07.html
+++ b/mywork07.html
@@ -9,8 +9,6 @@
   <meta name="format-detection" content="telephone=no" />
   <style>
   html,body{
-      -webkit-touch-callout:none ;
-      -webkit-text-size-adjust:none ;
       -webkit-tap-highlight-color:transparent ;
       -webkit-user-select:none ;
     }
@@ -133,6 +131,9 @@
    }
    .mineNumber{
     width: 100%; max-width: 100%; height: 100%; max-height: 100%; padding: 0px; margin: 0px; text-align: center; font-weight: bold; overflow: hidden;
+   }
+   @media all and (max-width: 768px){
+   	.outer{position: fixed;}
    }
   </style>
  </head>
