--- a/mywork07.html
+++ b/mywork07.html
@@ -133,7 +133,7 @@
     width: 100%; max-width: 100%; height: 100%; max-height: 100%; padding: 0px; margin: 0px; text-align: center; font-weight: bold; overflow: hidden;
    }
    @media all and (max-width: 768px){
-   	.outer{position: fixed;}
+   	.outer{position: fixed; width: 96%; margin-left: 2%; margin-right: 2%;}
    }
   </style>
  </head>
