--- a/mywork07.html
+++ b/mywork07.html
@@ -16,7 +16,6 @@
   	width: 320px; margin: 0px auto;
   	}
     .outer{
-  	position: fixed;
   	margin: 4px 5px;
   	padding: 4px;
     width: 300px;
@@ -132,9 +131,11 @@
    .mineNumber{
     width: 100%; max-width: 100%; height: 100%; max-height: 100%; padding: 0px; margin: 0px; text-align: center; font-weight: bold; overflow: hidden;
    }
-   @media all and (max-width: 768px){
+   @media all and (max-width: 320px){
    	.outer{
    		position: fixed;
+   		padding: 0px;
+   		margin: 0px;
    		top: 4px;
    		width: 100%;
    	}
