--- a/mywork07.html
+++ b/mywork07.html
@@ -13,7 +13,7 @@
       -webkit-user-select:none ;
     }
   	body{
-  	width: 320px; margin: 0px auto;
+  	width: 320px; max-width: 320px; margin: 0px auto;
   	}
     .outer{
   	margin: 4px 5px;
