--- a/mywork07.html
+++ b/mywork07.html
@@ -31,7 +31,7 @@
   	border-collapse: separate; border-spacing: 0px;
     }
     #mineField td{
-  	width: 22px; height: 22px;
+  	width: 22px; max-width: 22px; height: 22px;
   	background-color: rgb(192, 192, 192); 
 	}
     .cleared{
