--- a/mywork07.html
+++ b/mywork07.html
@@ -41,6 +41,7 @@
     border-bottom-color: white;
     border-right-color: white;
     }
+    .cleared:hover{}
     .untouched{
     border: 2px solid;
     border-left-color: white;
@@ -49,6 +50,7 @@
     border-bottom-color: rgb(128, 128, 128);
     cursor: pointer;
     }
+    .untouched:hover{}
    #backToIndex{
    	position: absolute;
    	bottom: 20px;
