--- a/mywork07.html
+++ b/mywork07.html
@@ -211,7 +211,16 @@
     $(document).ready(function(){
 
     	makeMineField("mineField","untouched","cleared");
-
+	    
+	var lastTouchEnd = 0;
+	document.documentElement.addEventListener(‘touchend‘, function (event) {
+	  var now = Date.now();
+	  if (now - lastTouchEnd <= 300) {
+	    event.preventDefault();
+	  }
+	  lastTouchEnd = now;
+	}, false);
+	    
     	$("#noMine").mousedown(function(){
     		$("#noMine").removeClass("btnInner").addClass("cleared");
     	}).mouseup(function(){
