--- a/mywork07.html
+++ b/mywork07.html
@@ -132,7 +132,8 @@
    }
    .mineNumber{
     width: 22px; height: 22px;
-    padding: 0px; margin: 0px 0px 0px 6px; text-align: center; font-weight: bold; overflow: hidden;
+    padding: 0px; margin: 0px 0px 0px 6px; text-align: center; line-height: 22px;
+    font-weight: bold; overflow: hidden;
    }
    @media all and (max-width: 320px){
    	.outer{
