--- a/mywork07.html
+++ b/mywork07.html
@@ -132,8 +132,10 @@
    }
    .mineNumber{
     width: 22px; height: 22px;
-    padding: 0px; margin: 0px 0px 0px 6px; text-align: center; line-height: 22px;
+    padding: 0px; margin: 0px;
+    text-align: center; line-height: 22px;
     font-weight: bold; overflow: hidden;
+    display: block;
    }
    @media all and (max-width: 320px){
    	.outer{
