--- a/mywork07.html
+++ b/mywork07.html
@@ -104,6 +104,7 @@
     position: relative;
     width: 22px;
    }
+   #newFlag{cursor: pointer;}
    .faceOuter{
     position: absolute;
     top: .5px;
