--- a/mywork07.html
+++ b/mywork07.html
@@ -98,6 +98,7 @@
     width: fit-content;
    }
    .counterInner{
+    padding-right: 5px;
     text-align: right;
    }
    #newMine, #newFlag, .counterInner{
