--- a/mywork.html
+++ b/mywork.html
@@ -74,6 +74,7 @@
 				<li><a href="mywork05.html" target="_self">Random Quote Machine</a></li>
 				<li><a href="mywork06.html" target="_self">Wikipedia viewer</a></li>
 				<li><a href="mywork07.html" target="_self">Minesweeper - 扫雷</a></li>
+				<li><a href="mywork08.html" target="_self">Plain text to HTML code converter</a></li>
 			</ul>
 		</div>
 	</div>
