--- a/mywork08.html
+++ b/mywork08.html
@@ -6,9 +6,13 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <title>plain text to HTML code tool</title>
   <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+  <style>
+  html, body{width: 100%; height: 100%;}
+  #container{width: 100%; height: 100%;}
+</style>
 </head>
 <body>
-<div>
+<div id="container">
 <p>source</p>
 <textarea style="width: 98%; height: 40%; word-wrap: break-word; word-break: break-all;" id="sourceTxt"></textarea>
 <div>
