--- a/mywork08.html
+++ b/mywork08.html
@@ -8,7 +8,8 @@
   <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <style>
   html, body{width: 100%; height: 100%;}
-  #container{width: 100%; height: 100%;}
+  #container{width: 95%; height: 100%;}
+  button{border-radius: 0px;}
 </style>
 </head>
 <body>
