--- a/mywork08.html
+++ b/mywork08.html
@@ -9,7 +9,7 @@
   <style>
   html, body{width: 100%; height: 100%;}
   #container{width: 95%; height: 100%;}
-  button{border-radius: 0px;}
+  button{margin-top: 10px; border-radius: 0px;}
 </style>
 </head>
 <body>
@@ -17,17 +17,17 @@
 <p>source</p>
 <textarea style="width: 98%; height: 40%; word-wrap: break-word; word-break: break-all;" id="sourceTxt"></textarea>
 <div>
-<button id="brBtn" style="margin-top: 10px; width: 56px;">Add br</button>
-<button id="noTagBtn" style="margin-top: 10px; width: 140px;">delete excel formats</button>
-<button id="pBtn" style="margin-top: 10px; width: 42px;">To p</button>
-<button id="ulBtn" style="margin-top: 10px; width: 45px;">To ul</button>
-<button id="olBtn" style="margin-top: 10px; width: 45px;">To ol</button>
-<button id="olBtni" style="margin-top: 10px; width: 55px;">To i ol</button>
-<button id="olBtna" style="margin-top: 10px; width: 56px;">To a ol</button>
-<button id="imgBtn" style="margin-top: 10px; width: 60px;">To img</button>
-<button id="spanBtn" style="margin-top: 10px; width: 65px;">To span</button>
-<button id="aSelfBtn" style="margin-top: 10px; width: 100px;">To anchor link</button>
-<button id="aNewBtn" style="margin-top: 10px; width: 120px;">To new page link</button>
+<button id="brBtn">Add br</button>
+<button id="noTagBtn">delete excel formats</button>
+<button id="pBtn">To p</button>
+<button id="ulBtn">To ul</button>
+<button id="olBtn">To ol</button>
+<button id="olBtni">To i ol</button>
+<button id="olBtna">To a ol</button>
+<button id="imgBtn">To img</button>
+<button id="spanBtn">To span</button>
+<button id="aSelfBtn">To anchor link</button>
+<button id="aNewBtn">To new page link</button>
 </div>
 <p>output</p>
 <textarea style="width: 98%; height: 40%; word-wrap: break-word; word-break: break-all;" id="outputTxt"></textarea>
