changed latin letter list

--- a/mywork08.html
+++ b/mywork08.html
@@ -135,7 +135,7 @@ $(document).ready(function(){
 				newArr.push(str);
 			}
 		});
-		var newTxt = "<ol style='list-style: lower-latin;>\n" + newArr.join("\n") + "\n</ol>";
+		var newTxt = "<ol style='list-style: lower-latin;'>\n" + newArr.join("\n") + "\n</ol>";
 		$("#outputTxt").val(newTxt);//输出
 	});
 	//转成img
