changed mine icon color

--- a/mywork07.html
+++ b/mywork07.html
@@ -169,6 +169,7 @@
     background-color: black;
    }
    .mineNumber{
+    color: black;
     width: 22px; height: 22px;
     padding: 0px; margin: 0px;
     text-align: center; line-height: 22px;
