--- a/mywork07.html
+++ b/mywork07.html
@@ -13,13 +13,15 @@
       -webkit-user-select:none ;
       }
       body{
+      margin: 0px;
       width: 320px; max-width: 320px; margin: 0px auto;
       }
       .outer{
-      margin: 4px 5px;
+      position: relative;
+      margin: 0px;
       padding: 4px;
       width: 300px;
-      height: 430px;
+      height: 440px;
       background-color: rgb(192, 192, 192);
       }
       #mineField{
@@ -54,8 +56,8 @@
       .untouched:hover{}
       #backToIndex{
       position: absolute;
-      bottom: 20px;
-      right: 10px;
+      bottom: 5px;
+      right: 5px;
       width: 50px;
       height: 50px;
       border-radius: 50px;
@@ -181,7 +183,6 @@
       position: fixed;
       padding: 0px;
       margin: 0px;
-      top: 4px;
       width: 320px;
       }
       }
