--- a/mywork08.html
+++ b/mywork08.html
@@ -211,7 +211,7 @@ $(document).ready(function(){
 				// console.log(tds[i]);
 			}
 			// console.log(tds);
-			m = "\t\t<tr>\n" + tds.join("") + "\t\t</tr>\n";
+			m = "\t\t<tr>\n" + tds.join("") + "\t\t</tr>";
 			arr.push(m);
 		});
 		// console.log(arr);
