--- a/mywork08.html
+++ b/mywork08.html
@@ -7,14 +7,14 @@
   <title>plain text to HTML code tool</title>
   <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <style>
-  html, body{width: 100%; height: 100%;}
+  html, body{height: 100%;}
   #container{width: 95%; height: 100%;}
   button{margin-top: 10px; border-radius: 0px;}
 </style>
 </head>
 <body>
 <div id="container">
-<p>source</p>
+<p style="margin: 2px;">source</p>
 <textarea style="width: 98%; height: 40%; word-wrap: break-word; word-break: break-all;" id="sourceTxt"></textarea>
 <div>
 <button id="brBtn">Add br</button>
@@ -30,7 +30,7 @@
 <button id="aNewBtn">To new page link</button>
 <button id="tableBtn">To table</button>
 </div>
-<p>output</p>
+<p style="margin: 2px;">output</p>
 <textarea style="width: 98%; height: 40%; word-wrap: break-word; word-break: break-all;" id="outputTxt"></textarea>
 </div>
 
