--- a/mywork05.html
+++ b/mywork05.html
@@ -123,7 +123,7 @@ $(document).ready(function() {
     });
     // $.ajaxSettings.async = false;
     $.getJSON(
-      "https://houzhenni.github.io/mywork/criminal-minds-quotes.json",
+      "./mywork/criminal-minds-quotes.json",
       function(data) {
         if (data !== "") {
           allQuotes = data.quotes;
