--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: blog
 title: Home
 description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
-  Open `index.html` to edit this text.
+  The personal website of HOU Zhenni Jenny.
+  我是生活在香港的Jenny，喜欢研究语言、跨境电商和前端技术，欢迎找我玩耍~
 ---
