--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: blog
 title: Home
 description: >
-  The personal website of HOU Zhenni Jenny.
+  The personal website of HOU Zhenni Jenny. houzhenni
   我是生活在香港的Jenny，喜欢研究语言、跨境电商和前端技术，欢迎找我玩耍~
 ---
