--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ layout: blog
 title: Home
 description: >
   The personal website of HOU Zhenni Jenny. houzhenni
+  Working and living in Hong kong, I'm open to any chances.
   我是生活在香港的Jenny，喜欢研究语言、跨境电商和前端技术，欢迎找我玩耍~
 ---
